<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/iv_produk_gambar"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:src="@drawable/default_image_placeholder"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/produk_judul"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_produk_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            style="@style/TextContent.Black"
            android:text="@string/product_name"
            android:textSize="20dp" />

        <TextView
            android:layout_margin="2dp"
            style="@style/TextContent.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kurang"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_produk_code"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextContent.Black"
            android:text="@string/code"
            android:textSize="20dp" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_produk_harga"
        android:layout_gravity="center"
        style="@style/TextContent.Subtitle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/product_price"
        android:textSize="14sp" />

    <TextView
        style="@style/TextContent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:lineSpacingMultiplier="1"
        android:text="@string/rincian_produk"
        android:textColor="@android:color/black" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/keteranga_warna" />

            <TextView
                style="@style/TextSpec.Value"
                android:id="@+id/tv_produk_warna"
                android:text="@string/putih"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="Bahan " />

            <TextView
                android:id="@+id/tv_produk_bahan"
                style="@style/TextSpec.Value"
                android:text="@string/brukat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/stok_kain" />

            <TextView
                android:id="@+id/tv_produk_stok"
                style="@style/TextSpec.Value"
                android:text="@string/_20_meter" />
        </TableRow>
    </TableLayout>

    <TextView
        style="@style/TextContent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:lineSpacingMultiplier="1"
        android:text="@string/deskripsi_produk"
        android:textColor="@android:color/black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_produk_deskripsi"
                style="@style/TextSpec.Value2"
                android:text="@string/deskripi_detail_produk"/>

        </TableRow>
    </TableLayout>

</LinearLayout>