<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shipping_address"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/change_shipping_adress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:gravity="end"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:alpha=".5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_address"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/user_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_phone_number"
        android:layout_marginStart="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:alpha=".5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/payment_method_info"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:gravity="end"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:alpha=".5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_transfer"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>